--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="container showgrid">
 		
 		<!-- Your Content -->
-		<h1>Your Website</h1>
+		<h1>My Resume hehe</h1>
 
 		<!-- Clearfix -->
 		<div class="clear"></div>
