--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Resume</title>
-	
- <link rel="icon" href="favicon.ico">	
+		
+ <link rel="icon" href="img/cslogo.ico">	
  
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">
