--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 		</div>
 		<br><br>
 	<div class="cont">
-		 <a href="#" class="btn">Home</a>
-		  <a href="#" class="btn">Resume</a>
-		    <a href="#" class="btn">Images</a>
+		 <a href="http://seachowders.github.io/" class="btn">Home</a>
+		  <a href="http://seachowders.github.io/p2-resume/" class="btn">Resume</a>
+		    <a href="http://seachowders.github.io/p4-portfolio" class="btn">Images</a>
 	</div>
 		<h5 class= "grid_12 center pullup">Web/Graphic Design</h5>
 		
