--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				
 			</div>
 			<div class="clear"></div>
-			<a href="http://seachowders.github.io/p2-resume/" class="stop"><h1 class="center bborder">Projects</h1></a>
+			<a href="http://seachowders.github.io/p4-portfolio/" class="stop"><h1 class="center bborder">Projects</h1></a>
 			<div class="clear"></div>
 
 			<div class="grid_12">	
